--- a/W6D5/react_widgets/index.css
+++ b/W6D5/react_widgets/index.css
@@ -28,3 +28,23 @@
   width: 33%;
   margin: 0px;
 }
+
+.flexfrog-article{
+  width: 294px;
+  height: 4000px;
+  font-size: 100px;
+  background-image: url(https://orig00.deviantart.net/00f5/f/2013/099/e/6/patrick_starmie_by_da_blue_monkey-d6126w0.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  color: white;
+}
+
+.flexfrog-everything{
+  width: 300px;
+  border: 3px solid maroon;
+  border-top: 0px;
+}
+
+.clicked{
+  border-bottom: none;
+}
